# TalkingHeadBench

./: .dockerignore  .gitignore  LICENSE  README.md  REWARD_LOGIC.md  __init__.py  client.py  conftest.py  openenv.yaml  pyproject.toml  requirements.txt
.github/: agent.md
docs/: CODEBASE_REVIEW.md  OPENENV_INTEGRATION_GUIDE.md  PROJECT_OVERVIEW.md  annotation_worksheet_subenv1.md  annotation_worksheet_subenv2.md  annotation_worksheet_subenv3.md
examples/: simple_agent.py
scripts/: convert_captions.py  export_test_set.py  extract_subenv1_signals.py  extract_subenv2_signals.py  extract_subenv3_signals.py  generate_annotation_worksheet.py  validate_annotations.py
server/: Dockerfile  __init__.py  app.py  artifact_ingest.py  custom_ui.py  llm_adapter.py  requirements.txt  talking_head_environment.py
src/: evaluate.py  pipeline.py
src/schemas/: ground_truth.py  subenv1.py  subenv2.py  subenv3.py
src/utils/: canonical.py  grader_utils.py
tests/: conftest.py
tests/smoke/: test_evaluate_cli.py  test_grader_arithmetic.py  test_ingestion_api.py  test_node1_boundaries.py  test_node2_boundaries.py  test_node5_boundaries.py  test_node7_deep.py  test_node8_boundaries.py  test_pipeline_bundle.py  test_pipeline_e2e.py  test_schema_roundtrip.py  test_validate_annotations_cli.py
tests/test_set/: subenv1_cases.json  subenv2_cases.json  subenv3_cases.json
tests/unit/: test_canonical.py  test_graders.py  test_llm_adapter.py  test_node4_extractor.py  test_node7_extractor.py  test_openenv_environment.py  test_schemas.py  test_subenv1.py  test_subenv2.py  test_subenv3.py
(+13 files in other folders)
